<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@color/ui_black"
        android:foregroundGravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_d" />

    <Button
        android:id="@+id/showqr"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_hollow"
        android:text="@string/bu_showqr" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:gravity="right"
        android:text="@string/default_addr"
        android:textColor="@color/ui_white"
        app:fontFamily="@font/museo" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qr_code"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/default_val"
        android:textColor="@color/ui_white"
        android:textSize="30sp"
        app:fontFamily="@font/museo" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qr_code"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@id/balance"
        android:text="@string/default_label"
        android:textColor="@color/ui_white"
        android:textSize="30sp"
        app:fontFamily="@font/museo" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/address"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/int_white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transactions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons"
        android:layout_below="@id/textView2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:text="@string/lbl_transactions"
        android:textColor="@color/ui_white"
        app:fontFamily="@font/museo" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/ui_black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_hollow"
            android:includeFontPadding="false"
            android:text="@string/bu_send" />

        <Button
            android:id="@+id/copy_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_hollow"
            android:text="@string/bu_copyaddr" />
    </LinearLayout>
</RelativeLayout>